click google search added

--- a/link.html
+++ b/link.html
@@ -1,3 +1,4 @@
+<script>
 $(document).ready(function () {
     var table = $("#table").DataTable();
 
@@ -8,3 +9,7 @@ $(document).ready(function () {
     });
     $("#table tr").css('cursor', 'pointer');
 });
+
+</script>
+</body>
+</html>
