--- a/link.html
+++ b/link.html
@@ -11,5 +11,6 @@ $(document).ready(function () {
 });
 
 </script>
+<a href="https://clustrmaps.com/site/1bl00" title="Visit tracker"><img width="30" src="//www.clustrmaps.com/map_v2.png?d=yihjkvzkrnkhR7PmJGyXjZDpurEc8CbVHvBnCLFhxsE&amp;cl=ffffff"></a>
 </body>
 </html>
